# bazel_sample

./: .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  bazelw
App/: Info.plist
App/Base.lproj/: Main.storyboard
Libraries/LibraryA/: BUILD
Libraries/LibraryA/Tests/: Test.swift
Libraries/LibraryB/: BUILD
Libraries/LibraryC/: BUILD
Libraries/LibraryD/: BUILD
