bazel_dep(name = "apple_support", version = "1.17.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "3.11.2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "2.2.2", repo_name = "build_bazel_rules_swift")

bazel_dep(name = "rules_xcodeproj", version = "2.9.1")